--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,37 @@
-body{
+/* body{
   background: #202020;
   color: white;
+} */
+
+:root {
+  --color-fondo: #202020;
+  --color-texto: #ffffff;
+  --color-encabezado: #333333;
+  --color-borde: #444444;
+  --color-seleccionado: #555555;
+}
+
+.tabla-tareas {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: var(--color-fondo);
+  color: var(--color-texto);
+}
+
+.tabla-tareas th, .tabla-tareas td {
+  border: 1px solid var(--color-borde);
+  padding: 10px;
+  text-align: left;
+}
+
+.tabla-tareas th {
+  background-color: var(--color-encabezado);
+}
+
+.tabla-tareas tr:hover {
+  background-color: var(--color-seleccionado);
+}
+
+.tabla-tareas tr:hover td {
+  color: var(--color-texto);
 }
